# mata62-trab2-backend

./: .env  .env.local  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  start.sh  wait-for-db.sh
alembic/: env.py
alembic/versions/: 0e03d23dd4d2_nv.py  125a06aa1513_nv1.py  126634b5ef31_nv1.py  194f69ef46fe_add_role_user.py  2f6b0100e220_nasda.py  446ba4ce82f9_nv.py  446f70255ffb_credits.py  839e9a25eef8_initial_migration.py  8e82170be38f_nova_ver.py  ac1762299d42_useranswer.py  b5f291c0c3b6_nv2.py
src/: main.py
src/controllers/: answer_controller.py  auth_controller  auth_controller.py  credit_controller.py  question_controller.py  quiz_controller.py  ranking_controller.py  session_controller.py  team_controller.py  user_answers.py
src/custom_types/: answer_types.py  credit_types.py  dashboard_types.py  game_types.py  question_types.py  quiz_types.py  ranking_types.py  session_types.py  start_quiz_unified_types.py  team_types.py  token_types.py  user_answers.py  user_types.py
src/model/: __init__.py  manager.py  models.py
src/scripts/: seed_db.py
src/utils/: utils.py
src/views/: answer_view.py  auth_view.py  credit_view.py  dashboard_view.py  game_view.py  question_view.py  quiz_view.py  ranking_view.py  run_quiz.py  session_view.py  team_view.py  user_answers_view.py
