[project]
name = "soccer-quiz-backend"
version = "0.0.0dev1"
authors = [
  { name = "Indaiara Bonfim" },
  { name = "Lucca Lobo" },
  { name = "Pedro H Costa" },
  { name = "Rian Vasconscelos" }
]
requires-python = ">=3.13"
dependencies = [
  # "name == version"
  "fastapi[standard] == 0.121.1",
  "pydantic == 2.12.4",
  "sqlalchemy == 2.0.44",
  "pymsql == 1.1.2",
  "cryptography == 46.0.3"
]
