[project]
name = "soccer-quiz-backend"
version = "0.0.0dev1"
authors = [
  { name = "Indaiara Bonfim" },
  { name = "Lucca Lobo" },
  { name = "Pedro H Costa" },
  { name = "Rian Vasconscelos" }
]
requires-python = ">=3.10"
dependencies = [
  # "name == version"
  "fastapi[standard] == 0.121.1",
  "pydantic == 2.12.4",
  "sqlalchemy == 2.0.44",
  "pymysql == 1.1.2",
  "cryptography == 46.0.3",
  "bcrypt == 4.2.0",
  "pyjwt == 2.8.0",
  "python-multipart >= 0.0.18",
  "alembic == 1.17.2"
]
